Fix horizontal overflow, font sizes, widths

--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,8 @@ body {
 
 p,
 a {
-    font-size: 10px;
+    font-size: 12px;
+    text-decoration: none;
 }
 
 h1, h2, h3, h4, ul {
@@ -27,7 +28,7 @@ header, .midheader {
    align-items: flex-start;
    background-color: #1F2937;
    color: #F9FAF8;
-   padding: 25px;
+   padding: 25px 0px;
    padding-bottom: 40px;
 }
 
@@ -43,7 +44,7 @@ header, .midheader {
 
 .midheader {
     justify-content: center;
-    gap: 16px;
+    gap: 20px;
 }
 
 .midheader-left {
@@ -67,18 +68,28 @@ header, .midheader {
     align-items: center;
 }
 
+.images {
+    padding: 20px 0px;
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+}
+
+.image-text-pair p {
+    max-width: 104px;
+    font-size: 10px;
+    overflow: text-wrap;
+}
+
 .image-text-pair {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding: 20px;
-    
 }
 
 .placeholder {
-    width: 100%;
-    height: 200px;
+    height: 170px;
     flex: 1;
     background-color: teal;
     border-radius: 25px;
@@ -92,11 +103,12 @@ header, .midheader {
     height: 100px;
     border: 2px solid #3882F6;
     border-radius: 25px;
+    max-width: 100%
 }
 
 .quote {
     align-self: center;
-    width: auto;
+    width: 60%;
     height: 300px;
     display: flex;
     flex-direction: column;
@@ -108,7 +120,7 @@ header, .midheader {
 .call-to-action {
     align-self: center;
     border-radius: 25px;
-    width: 500px;
+    width: 60%;
     height: 150px;
     display: flex;
     justify-content: space-evenly;
@@ -138,21 +150,17 @@ ul {
     gap: 16px;
 }
 
-a {
-    text-decoration: none;
-}
-
 .header-link {
     color: #F9FAF8;
 }
 
 #hero {
-    font-size: 48px;
+    font-size: 40px;
     font-weight: extra-bold;
 }
 
 #logo {
-    font-size: 24px;
+    font-size: 16px;
 }
 
 button {
@@ -161,6 +169,7 @@ button {
     border-radius: 8px;
     padding: .2rem .4rem;
     color: #f9faf8;
+    font-size: 12px;
 }
 
 
